Task 1/db1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db1
  namespace: project-plato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
