Task 1/db2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
  namespace: project-plato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db2-nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: db2-nginx-config
        configMap:
          name: db2-nginx-config
