Task 1/db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2-service
  namespace: project-plato
spec:
  selector:
    app: db2
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
